# gengin

./: .gitignore  CMakeLists.txt  README.md
include/glad/glad/: glad.h
shaders/: fragment_shader.fs  tesselation_control_shader.tesc  tesselation_evaluation_shader.tese  vertex_shader.vs
src/: glad.c  main.cpp  plane.cpp  shader.h  terrain_gen.cpp
